--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,12 +1,33 @@
 .mainNavStyle {
     width: 100%;
-    background-color: rgb(186, 65, 65);
+    background-color: rgb(0, 0, 0);
     color: white;
     z-index: 20;
-    position: absolute;
-    display: flex;
-    li {
-        display: inline;
+    ul {
+        list-style: none;
+        display: flex;
     }
+    li {
+        display: inline-block;
+        list-style: none;
+        padding: 22px 20px 10px 10px;
+        align-items: center;
+        font-size: 15px
+    }
+    a {
+        text-decoration: none;
+        color: white;
+        text-align: center;
+    }
+    i {
+        padding: 25px;
+    }
+}
+
+.mainWrapper {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+
 }
 
