--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/settings.scss';
+
 .mainNavStyle {
     width: 100%;
     background-color: rgb(0, 0, 0);
@@ -29,5 +31,9 @@
     width: 100%;
     justify-content: space-between;
 
+}
+
+.linkActive {
+    color: $color-warning !important;//$color-warning;
 }
 
